<resources>
    <string name="app_name">Meeting Scheduler</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register Now</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Coming soon...</string>
    <string name="title_activity_register">Register Account</string>

    <!-- Strings related to register -->
    <string name="prompt_fullname">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="action_register_submit">Register</string>

    <!-- Strings related to Create meeting -->
    <string name="prompt_meeting_title">Meeting title</string>
    <string name="prompt_priority">Priority</string>
    <string name="prompt_duration">Duration</string>
    <string name="prompt_Location">Location</string>
    <string name="action_send_invitation">Send Invitation</string>


    <string name="title_activity_event">Event</string>
</resources>
